Remove JobFilterAndSort from Weles pkg
This struct is now in server/operations/jobs pkg, renamed
(automatically by go-swagger) to JobListerBody. This struct
is only used by server thus should not clutter main weles pkg.
