# swagger.yml
@@ -96,7 +96,13 @@ paths:
           description: Job Filter and Sort object.
           required: false
           schema:
-            $ref: '#/definitions/JobFilterAndSort'
+            description: Data for filtering and sorting Weles Jobs lists.
+            type: object
+            properties:
+              Filter:
+                $ref: '#/definitions/JobFilter'
+              Sorter:
+                $ref: '#/definitions/JobSorter'
         - in: query
           name: after
           description: JobID of the last element from previous page.
@@ -416,14 +422,6 @@ definitions:
         $ref: '#/definitions/JobSortBy'
       SortOrder:
         $ref: '#/definitions/SortOrder'
-  JobFilterAndSort:
-    description: Data for filtering and sorting Weles Jobs lists.
-    type: object
-    properties:
-      Filter:
-        $ref: '#/definitions/JobFilter'
-      Sorter:
-        $ref: '#/definitions/JobSorter'
   ArtifactType:
     description: |
       denotes type and function of an artifact.
